--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
-//        classpath files("libs/gradle-play-publisher-1.2.3.jar")
+        classpath 'com.github.triplet.gradle:play-publisher:1.2.2'
     }
 }
 
