--- a/build.gradle
+++ b/build.gradle
@@ -8,13 +8,10 @@ buildscript {
         gradlePluginPortal()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.4'
+        classpath "com.android.tools.build:gradle:7.0.4"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.github.triplet.gradle:play-publisher:3.7.0"
     }
-}
-
-plugins {
-    id "com.github.triplet.play" version "3.7.0-agp4.2"
 }
 
 allprojects {
