--- a/kellocharts/build.gradle
+++ b/kellocharts/build.gradle
@@ -26,28 +26,38 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
-ext {
-    bintrayRepo = 'KelloCharts'
-    bintrayName = 'KelloCharts'
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            groupId = 'co.csadev'
+            artifactId = 'kellocharts'
+            version = '2.0.1'
 
-    publishedGroupId = 'co.csadev'
-    libraryName = 'KelloCharts'
-    artifact = 'kellocharts'
-
-    libraryDescription = 'Kotlin Charts/graphs library for Android compatible with API 21+, several chart types with support for scaling, scrolling and animations'
-
-    siteUrl = 'https://github.com/gtcompscientist/KelloCharts'
-    gitUrl = 'https://github.com/gtcompscientist/KelloCharts.git'
-
-    libraryVersion = android.defaultConfig.versionName
-
-    developerId = 'gtcompscientist'
-    developerName = 'Charles Anderson'
-    developerEmail = 'csadevapps@gmail.com'
-
-    licenseName = 'The Apache Software License, Version 2.0'
-    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-    allLicenses = ["Apache-2.0"]
+            pom {
+                name = 'KelloCharts'
+                description = 'Kotlin Charts/graphs library for Android compatible with API 21+, several chart types with support for scaling, scrolling and animations'
+                url = 'https://github.com/gtcompscientist/KelloCharts'
+                licenses {
+                    license {
+                        name = 'The Apache Software License, Version 2.0'
+                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    }
+                }
+                developers {
+                    developer {
+                        id = 'gtcompscientist'
+                        name = 'Charles Anderson'
+                        email = 'csadevapps@gmail.com'
+                    }
+                }
+                scm {
+                    connection = 'scm:git:git://github.com/gtcompscientist/KelloCharts.git'
+                    developerConnection = 'scm:git:ssh://github.com/gtcompscientist/KelloCharts.git'
+                    url = 'https://github.com/gtcompscientist/KelloCharts'
+                }
+            }
+        }
+    }
 }
 
 tasks.withType(Javadoc) {
